--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 
         <div class="section-title">
           <h2>About Me</h2>
-          <p>Hallo Guys! My name is Kelvin Kurniawan, you can call me Kelvin. Im a IT student at Telkom University, I am interested and have hard skills in marketing, information technology, social humanity, public speaking and relations. Supported by credensials lisence & certification, organizations & committe experience, soft skills and leadership.</p>
+          <p> Hello World! I am an undergraduate IT student at Telkom University. I am a tough learner, resilience, consistent, able to work in teams or individually with pleasure and accuracy. 
+Enthusiastic and passionate in data management including data analyst & data science, information technology, business development and digital marketing. Supported by soft skills, connections, credensials lisence & professional experience.</p>
         </div>
 
         <div class="row content">
@@ -92,9 +93,6 @@
              Education Background :
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Elementary School 2 Kauman Batang. Central Java</li>
-              <li><i class="ri-check-double-line"></i> Junior High School 3 Batang, Central Java</li>
-              <li><i class="ri-check-double-line"></i> Senior High School 2 Batang. Central Java</li>
               <li><i class="ri-check-double-line"></i> Bachelor Degree Information Technology, Telkom University Bandung, West Java</li>
             </ul>
           </div>
@@ -119,48 +117,48 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4>Public Speaking</h4>
-              <p>Have the mentality and ability to do public speaking well.</p>
+              <h4>Data Analysis</h4>
+              <p>Data analytics is the science of analyzing raw data into meaningful and actionable coherent information. This information is then used to drive the best business decisions.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4>Critical Thinking</h4>
-              <p>Have the ability to think critically and analyze problem solving.</p>
+              <h4>RPA Developer</h4>
+              <p>Robotic Process Automation or RPA is a technology that enables computer software to mimic actions normally performed by humans interacting with digital systems to perform simple and repetitive tasks and business processes.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4>Time Management</h4>
-              <p>Able to manage time with any condition and situation.</p>
+              <h4>Web Developer</h4>
+              <p>Can generate a website or application, such as menu buttons, search boxes, and so on. Apart from that, they also ensure optimal website performance..</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4>Organizations & Volunteer Experience</h4>
-              <p>Have sufficient experience in organization to be applied anywhere.</p>
+              <h4>Digital Marketing</h4>
+              <p>Digital marketing is a marketing activity or promotion of a brand or product using digital media or the internet. Focusing on content development and business analysis such as campaigns on social media..</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4>Creative</h4>
-              <p>I am a creative person in creating & manage content to engage everyone.</p>
+              <h4>Project Management</h4>
+              <p>Project management is the process of managing resources to complete projects according to the parameters agreed upon by the company..</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4>Leadership</h4>
-              <p>Have leadership skill to coordinating team & carry out a responsibility.</p>
+              <h4>Aanalytical Thinking</h4>
+              <p>Analytical thinking is the ability to solve problems by evaluating the information that has been collected for the needs of business processes.</p>
             </div>
           </div>
 
