--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Enthusiastic and passionate in data management including data analyst & data sci
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4>Aanalytical Thinking</h4>
+              <h4>Analytical Thinking</h4>
               <p>Analytical thinking is the ability to solve problems by evaluating the information that has been collected for the needs of business processes.</p>
             </div>
           </div>
