--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About Me</h2>
-          <p> Hello World! I am an undergraduate IT student at Telkom University. I am a tough learner, resilience, consistent, able to work in teams or individually with pleasure and accuracy. 
+          <p> Hello World! I am an fresh graduate of Information Technology from Telkom University. I am a tough learner, resilience, consistent, able to work in teams or individually with pleasure and accuracy. 
 Enthusiastic and passionate in data management including data analyst & data science, information technology, business development and digital marketing. Supported by soft skills, connections, credensials lisence & professional experience.</p>
         </div>
 
